# stack

./: .copier-answers.yml  .gitignore  LLM_REFERENCE_BLOOM.md  LLM_REFERENCE_CUBE.md  README.md  book.ipynb  book2.ipynb  consignes_ia.md  pyproject.toml
src/stack/: __init__.py  main.py
tests/: test_main.py
